[package]
name = "rsacracker"
version = "0.8.0"
edition = "2021"
authors = ["skyf0l <skyf0lmails@proton.me>"]
description = "Powerful RSA cracker for CTFs. Supports RSA, X509, OPENSSH, PKCS#12, PKCS#7, and CSR in PEM and DER formats."
repository = "https://github.com/skyf0l/RsaCracker"
license = "MIT OR Apache-2.0"
categories = ["cryptography", "mathematics"]
keywords = ["rsa", "cracker", "ctf", "crypto", "cryptography"]
include = [
  "/src/**/*",
  "/Cargo.toml",
  "/LICENSE*",
  "/README.md",
]
readme = "README.md"

[workspace]
members = [
  "tools/gen_keys",
]

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true

[dependencies]
thiserror = "2.0"
lazy_static = "1.5"
clap = { version = "4.5", features = ["derive", "env"] }
main_error = "0.1"
primal = "0.3"
ecm = { version = "1.0", features = ["progress-bar"] }
openssl = "0.10"
base-x = "0.2"
display_bytes = "0.2"
ssh-key = { version = "0.6", features = ["encryption"] }
tokio = { version = "1.40", features = ["rt", "rt-multi-thread"] }
mpsc = { version = "0.2", default-features = false }
num_cpus = "1.15"
update-informer = "1.1"
indicatif = "0.18"
itertools = "0.14"
discrete-logarithm = "1.0"
base64 = "0.22"
factordb = { version = "0.3.0", features = ["blocking"] }
rayon = "1.10.0"

[dependencies.rug]
version = "1.26"
default-features = false
features = ["integer", "rand", "std"]

